--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.1.3'
+    ext.kotlin_version = '1.2.10'
     repositories {
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.2'
+        classpath 'com.android.tools.build:gradle:3.0.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -19,8 +21,8 @@ allprojects {
 
     allprojects{
         ext{
-            ext.kotlin_version = '1.1.3'
-            ext.appcompat_verision = '26.0.0'
+            ext.kotlin_version = '1.2.10'
+            ext.appcompat_verision = '26.1.0'
 
             support_v7 = "com.android.support:appcompat-v7:$appcompat_verision"
 
