--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,9 +2,11 @@ apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android'
 
+apply plugin: 'com.github.dcendents.android-maven'
+
 android {
   compileSdkVersion 26
-  buildToolsVersion "25.0.3"
+  buildToolsVersion "26.0.2"
 
 
   defaultConfig {
@@ -20,6 +22,11 @@ android {
       minifyEnabled false
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
+  }
+
+  compileOptions {
+    sourceCompatibility JavaVersion.VERSION_1_7
+    targetCompatibility JavaVersion.VERSION_1_7
   }
 }
 
@@ -38,4 +45,29 @@ buildscript {
   dependencies {
     classpath parent.ext.kotlin_plugin
   }
+}
+
+tasks.withType(JavaCompile) {
+  options.encoding = "UTF-8"
+}
+
+task androidJavadocs(type: Javadoc) {
+  failOnError  false
+  source = android.sourceSets.main.java.srcDirs
+  classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+}
+
+task androidJavadocsJar(type: Jar, dependsOn: androidJavadocs) {
+  classifier = 'javadoc'
+  from androidJavadocs.destinationDir
+}
+
+task androidSourcesJar(type: Jar) {
+  classifier = 'sources'
+  from android.sourceSets.main.java.srcDirs
+}
+
+artifacts {
+  archives androidSourcesJar
+  archives androidJavadocsJar
 }
